# assassin-server

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  diesel.toml  docker-compose.override.yml  docker-compose.yml  run-dev.sh
.github/workflows/: build.yml
dockerfiles/: Dockerfile.dev  Dockerfile.prod
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
resources/: adjectives.txt  nouns.txt
src/: db.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs  utils.rs
src/db/: mod.rs
src/models/: api_errors.rs  constants.rs  enums.rs  errors.rs  game.rs  mod.rs  model_errors.rs  player.rs
src/routes/: auth.rs  debug.rs  game.rs  health.rs
src/utils/: auth.rs  config.rs  genstring.rs  logging.rs
