[package]
name = "assassin_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.11.0"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.64"
openssl = "0.10.35"
reqwest = {version = "0.11.4", features = ["blocking"]}
snailquote = "0.3.0"
dotenv = "0.15.0"
actix-web = "3"
actix-web-httpauth = "0.5.1"
config = "0.10"
color-eyre = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["log-tracer", "std"] }
tracing-bunyan-formatter = "0.2.4"
tracing-subscriber = { version = "0.2", features = ["ansi"] }
tracing-actix-web = "0.2.1"
tracing-error = "0.1.2"
lazy_static = "1.4.0"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }
diesel_migrations = "1.4.0"
listenfd = "0.3.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.15"
thiserror = "1.0.26"
